--- a/CSS/eventFlow.css
+++ b/CSS/eventFlow.css
@@ -65,6 +65,8 @@
     margin-top: -37%;
     margin-right: -8px;
 }
+
+/*styles for the configuration icons*/
 .element-prop-icon{
     float:right;
     width:26px;
@@ -72,7 +74,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     margin-top:-95px;
-    margin-right:22px;
+    margin-right:50px;
     cursor:pointer;
     color: red;
     border-radius: 40px;
@@ -85,7 +87,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     margin-top:-95px;
-    margin-right:-3px;
+    margin-right:25px;
     cursor:pointer;
     color: red;
     border-radius: 40px;
@@ -97,7 +99,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     margin-top:-95px;
-    margin-right:-30px;
+    margin-right:0;
     cursor:pointer;
     color: red;
     border-radius: 40px;
