--- a/CSS/style.css
+++ b/CSS/style.css
@@ -91,14 +91,14 @@
     position: fixed;
 }
 
-.wstreamdrop {
-    border: 1px solid gray;
-    text-align: center;
-    width: 130px;
-    height: 72px;
-    background-color:  honeydew;
-    position: fixed;
-}
+/*.wstreamdrop {*/
+    /*border: 1px solid gray;*/
+    /*text-align: center;*/
+    /*width: 130px;*/
+    /*height: 72px;*/
+    /*background-color:  honeydew;*/
+    /*position: fixed;*/
+/*}*/
 
 .squerydrop {
     border: 1px solid gray;
@@ -159,7 +159,7 @@
     width: 20px;
     height: 20px;
     margin-left: -10px;
-    margin-top: 0px;
+    margin-top: 0;
     border: 1px solid black;
     background-color: white;
 }
