--- a/View/Index.html
+++ b/View/Index.html
@@ -17,7 +17,6 @@
     <script src="../Javascript/Customscripts/main.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/formBuilder.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/storage.js" type="text/javascript"></script>
-    <script src="../Javascript/Customscripts/stream.js" type="text/javascript"></script>
 
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -37,7 +36,7 @@
 <body>
 <section>
 <!--Tool box for elements-->
-<div class ="col-sm-2" >
+<div class =" col-sm-2 toolPalatte" >
     <h1 class="toolbox-title">Toolbox</h1>
     <div class="toolbox" id="toolbox">
         <table>
