--- a/View/Index.html
+++ b/View/Index.html
@@ -8,9 +8,9 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
-    <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.4.1-all-min.js"></script>
     <script src="../Javascript/Helperscripts/jsoneditor.js"></script>
-    <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
+    <script src="../Javascript/Helperscripts/jsPlumb-2.2.6-min.js"></script>
+
     <script src="../Javascript/Helperscripts/dagre.js"></script>
     <script src="../Javascript/Helperscripts/dagre.min.js"></script>
 
