--- a/View/Index.html
+++ b/View/Index.html
@@ -1,35 +1,35 @@
 <html>
 <head>
 
-    <script src="../Javascript/Helperscripts/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js" type="text/javascript"></script>
-
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <!--<script src="../Javascript/Helperscripts/jquery.min.js"></script>-->
+    <script src="../Javascript/Helperscripts/underscore-min.js" type="text/javascript"></script>
+    <script src="../Javascript/Helperscripts/backbone-min.js" type="text/javascript"></script>
+    <script src="../Javascript/Helperscripts/backbone.localStorage-min.js" type="text/javascript"></script>
+    <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
     <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
     <script src="../Javascript/Helperscripts/jsoneditor.js"></script>
-    <script src="../Javascript/Helperscripts/jsPlumb-2.2.6-min.js"></script>
-
-    <script src="../Javascript/Helperscripts/dagre.js"></script>
+    <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
+    <!--<script src="../Javascript/Helperscripts/dagre.js"></script>-->
     <script src="../Javascript/Helperscripts/dagre.min.js"></script>
 
     <script src="../Javascript/Customscripts/main.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/formBuilder.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/storage.js" type="text/javascript"></script>
 
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../CSS/restartstyle.css">
+    <!--<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="../CSS/layout.css">
     <link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="../CSS/pe-icon-7-stroke.css" rel="stylesheet" />
+    <!--<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
+    <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>-->
+    <!--<link href="../CSS/pe-icon-7-stroke.css" rel="stylesheet" />-->
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
