--- a/View/editor.html
+++ b/View/editor.html
@@ -102,18 +102,14 @@
 <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
 
 <!--JSPlumb libraries-->
-<script src="../Javascript/Helperscripts/jquery.jsPlumb-1.4.1-all-min.js"></script>
 <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
 <script src="../Javascript/Helperscripts/jquery.blockUI.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 <!--Custom scipts-->
-<script src="../Javascript/Customscripts/receiver.js" type="text/javascript"></script>
-<script src="../Javascript/Customscripts/publisher.js" type="text/javascript"></script>
-<script src="../Javascript/Customscripts/executionPlan.js" type="text/javascript"></script>
 <script src="../Javascript/Customscripts/editor.js" type="text/javascript"></script>
 
-<link rel="stylesheet" type="text/css" href="../CSS/restartstyle.css">
+<link rel="stylesheet" type="text/css" href="../CSS/layout.css">
 <link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
