--- a/view/editor.html
+++ b/view/editor.html
@@ -97,24 +97,24 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js" type="text/javascript"></script>
 
-<script src="../Javascript/Helperscripts/jquery.min.js"></script>
+<script src="../js/lib/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
+<script src="../js/lib/jquery-ui.min.js"></script>
 
 <!--JSPlumb libraries-->
-<script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
-<script src="../Javascript/Helperscripts/jquery.blockUI.js"></script>
+<script src="../js/lib/jquery.jsPlumb-1.6.4-min.js"></script>
+<script src="../js/lib/jquery.blockUI.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 <!--Custom scipts-->
-<script src="../Javascript/Customscripts/editor.js" type="text/javascript"></script>
+<script src="../js/Customscripts/editor.js" type="text/javascript"></script>
 
-<link rel="stylesheet" type="text/css" href="../CSS/layout.css">
-<link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
+<link rel="stylesheet" type="text/css" href="../css/canvas.css">
+<link rel="stylesheet" type="text/css" href="../css/propertybox.css">
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-<link href="../CSS/pe-icon-7-stroke.css" rel="stylesheet" />
+<link href="../css/pe-icon-7-stroke.css" rel="stylesheet" />
 
 </body>
 </html>
