remove json output and save button

--- a/view/index.html
+++ b/view/index.html
@@ -123,38 +123,7 @@
 
     <!--Json Output and Manipulation Panel-->
     <div class = "col-sm-12">
-        <table  class="form-group">
-            <tr>
-                <td>
-                    <label>Json Output:</label>
-                </td>
-                <td>
-                    <textarea id="jsonOutput" style="width:825px;height:100px" class="form-control input-md"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>File name to save as:</label>
-                </td>
-                <td>
-                    <input id="inputFileNameToSaveAs" class="form-control input-md"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <button id="saveButton" class="myButton">Save</button>
-                </td>
-                <td>
-                    <button id="exportButton" class="myButton">Export</button>
-                </td>
-                <td>
-                    <button id="loadButton" class="myButton" style="margin-left: -630px">Load</button>
-                </td>
-                <td>
-                    <button id="auto-align" class="myButton" style="margin-left: -630px">Align</button>
-                </td>
-            </tr>
-        </table>
+        <button id="auto-align" class="myButton">Align</button>
     </div>
 
 </section>
