--- a/view/index.html
+++ b/view/index.html
@@ -11,7 +11,7 @@
     <script src="../js/lib/jsoneditor.js"></script>
     <script src="../js/lib/jquery.jsPlumb-1.6.4-min.js"></script>
     <!--<script src="../Javascript/Helperscripts/dagre.js"></script>-->
-    <script src="../js/lib/dagre.min.js"></script>
+    <script src="../js/lib/dagre.js"></script>
 
     <script src="../js/Customscripts/main.js" type="text/javascript"></script>
     <script src="../js/Customscripts/formBuilder.js" type="text/javascript"></script>
