Update jsPlumb version from 1.6.4 to 2.2.6

--- a/view/editor.html
+++ b/view/editor.html
@@ -92,29 +92,28 @@
     </div>
 
 </section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js" type="text/javascript"></script>
-
-<script src="../js/lib/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="../js/lib/underscore-min.js" type="text/javascript"></script>
+<script src="../js/lib/backbone-min.js" type="text/javascript"></script>
+<script src="../js/lib/backbone.localStorage-min.js" type="text/javascript"></script>
 <script src="../js/lib/jquery-ui.min.js"></script>
-
-<!--JSPlumb libraries-->
+<script src="../js/lib/jsoneditor.js"></script>
 <script src="../js/lib/jquery.jsPlumb-1.6.4-min.js"></script>
-<script src="../js/lib/jquery.blockUI.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="../js/lib/dagre.js"></script>
 
-<!--Custom scipts-->
 <script src="../js/Customscripts/editor.js" type="text/javascript"></script>
+<script src="../js/Customscripts/formBuilder.js" type="text/javascript"></script>
+<script src="../js/Customscripts/storage.js" type="text/javascript"></script>
 
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="../css/canvas.css">
 <link rel="stylesheet" type="text/css" href="../css/propertybox.css">
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-<link href="../css/pe-icon-7-stroke.css" rel="stylesheet" />
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </body>
 </html>
