--- a/view/index.html
+++ b/view/index.html
@@ -9,7 +9,7 @@
     <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
     <script src="../js/lib/jquery-ui.min.js"></script>
     <script src="../js/lib/jsoneditor.js"></script>
-    <script src="../js/lib/jquery.jsPlumb-1.6.4-min.js"></script>
+    <script src="../js/lib/jsPlumb-2.2.6-min.js"></script>
     <!--<script src="../Javascript/Helperscripts/dagre.js"></script>-->
     <script src="../js/lib/dagre.js"></script>
 
