--- a/view/index.html
+++ b/view/index.html
@@ -2,15 +2,12 @@
 <head>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <!--<script src="../Javascript/Helperscripts/jquery.min.js"></script>-->
     <script src="../js/lib/underscore-min.js" type="text/javascript"></script>
     <script src="../js/lib/backbone-min.js" type="text/javascript"></script>
     <script src="../js/lib/backbone.localStorage-min.js" type="text/javascript"></script>
-    <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
     <script src="../js/lib/jquery-ui.min.js"></script>
     <script src="../js/lib/jsoneditor.js"></script>
     <script src="../js/lib/jsPlumb-2.2.6-min.js"></script>
-    <!--<script src="../Javascript/Helperscripts/dagre.js"></script>-->
     <script src="../js/lib/dagre.js"></script>
 
     <script src="../js/Customscripts/main.js" type="text/javascript"></script>
@@ -21,12 +18,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>-->
     <link rel="stylesheet" type="text/css" href="../css/canvas.css">
     <link rel="stylesheet" type="text/css" href="../css/propertybox.css">
-    <!--<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
-    <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>-->
-    <!--<link href="../CSS/pe-icon-7-stroke.css" rel="stylesheet" />-->
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -109,19 +102,12 @@
 </div>
 
     <!--Container/Canvas-->
-    <div class="col-sm-7 container" id="container" >
-    </div>
+    <div class="col-sm-7 container" id="container" ></div>
 
-    <!--<div class="property" id="propertypane">-->
-            <!--<h1 class="toolbox-titlex" id="toolbox-titlex" name="toolbox-titlex">Properties</h1>-->
-            <!--<form class="panel"  id="lot" name="lot">-->
-            <!--</form>-->
-    <!--</div>-->
-    <div class="property col-sm-3 collapse" id="propertypane">
+    <!--Property pane-->
+    <div class="property col-sm-3 collapse" id="propertypane"></div>
 
-    </div>
-
-    <!--Json Output and Manipulation Panel-->
+    <!--Button Panel-->
     <div class = "col-sm-12">
         <button id="auto-align" class="myButton">Align</button>
     </div>
