remove unused files

--- a/css/propertybox.css
+++ b/css/propertybox.css
@@ -21,39 +21,6 @@ body {
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-.toolbox-titlex,.toolbox-titleq {
-    display:none;
-    width: 270px;
-    line-height: 43px;
-    margin: -60px auto 20px;
-    margin-left: 10px;
-    font-size: 19px;
-    font-weight: 500;
-    color: white;
-    color: rgba(255, 255, 255, 0.95);
-    text-align: center;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-    background: forestgreen;
-    border-radius: 3px;
-    background-image: -webkit-linear-gradient(top, #dc745e, #d45742);
-    background-image: -moz-linear-gradient(top, #dc745e, #d45742);
-    background-image: -o-linear-gradient(top, #dc745e, #d45742);
-    background-image: linear-gradient(to bottom, #dc745e, #d45742);
-    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
-}
-
-.panel{
-    display: none;
-    margin: 0 auto 20px 10px;
-    width: inherit;
-    height: inherit;
-    padding: 20px;
-    background: #f4f4f4;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
-}
 .toolbox {
     margin-left: 10px;
     padding: 20px;
@@ -65,34 +32,6 @@ body {
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-a.streamproperty{
-    float:right;
-    width:20px;
-    height: 10px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-30px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-a.showConnector {
-    float: right;
-    width: 20px;
-    height: 10px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top: -30px;
-    margin-right: 25px;
-    cursor: pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
 input {
     .form-control input-md;
     font-family: inherit;
@@ -102,341 +41,9 @@ input {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-.panel-input {
-    .form-control input-md;
-    display: block;
-    width: 100%;
-    height: 38px;
-    margin-top: 2px;
-    font-weight: 500;
-    background: none;
-    border: 0;
-    border-bottom: 1px solid #d8d8d8;
-}
-
-.panel-input-streamName {
-    .form-control input-md;
-    display: block;
-    width: 100%;
-    height: 38px;
-    margin-top: 2px;
-    font-weight: 500;
-    background: none;
-    border: 0;
-    border-bottom: 1px solid #d8d8d8;
-}
-.panel-input-streamDef {
-    .form-control input-md;
-    display: block;
-    width: 100%;
-    height: 38px;
-    margin-top: 2px;
-    font-weight: 500;
-    background: none;
-    border: 0;
-    border-bottom: 1px solid #d8d8d8;
-}
-.panel-input:focus {
-    .form-control input-md;
-    border-color: #1e9ce6;
-    outline: 0;
-}
-
-.panel-button,.panel-button-cancel,.panel-button-reset {
-    .myButton
-    display: block;
-    width: 33%;
-    float:left;
-    height: 42px;
-    margin-top: 25px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #494d59;
-    text-align: center;
-    text-shadow: 0 1px rgba(255, 255, 255, 0.5);
-    background: #fcfcfc;
-    border: 1px solid;
-    border-color: #d8d8d8 #d1d1d1 #c3c3c3;
-    border-radius: 2px;
-    cursor: pointer;
-    background-image: -webkit-linear-gradient(top, #fefefe, #eeeeee);
-    background-image: -moz-linear-gradient(top, #fefefe, #eeeeee);
-    background-image: -o-linear-gradient(top, #fefefe, #eeeeee);
-    background-image: linear-gradient(to bottom, #fefefe, #eeeeee);
-    -webkit-box-shadow: inset 0 -1px rgba(0, 0, 0, 0.03), 0 1px rgba(0, 0, 0, 0.04);
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.03), 0 1px rgba(0, 0, 0, 0.04);
-}
-
-.panel-button:active {
-    background: #eee;
-    border-color: #c3c3c3 #d1d1d1 #d8d8d8;
-    background-image: -webkit-linear-gradient(top, #eeeeee, #fcfcfc);
-    background-image: -moz-linear-gradient(top, #eeeeee, #fcfcfc);
-    background-image: -o-linear-gradient(top, #eeeeee, #fcfcfc);
-    background-image: linear-gradient(to bottom, #eeeeee, #fcfcfc);
-    -webkit-box-shadow: inset 0 1px rgba(0, 0, 0, 0.03);
-    box-shadow: inset 0 1px rgba(0, 0, 0, 0.03);
-}
-.panel-button:focus {
-    outline: 0;
-}
-
-#importstream{
-    display: none;
-    .form-group
-}
-#exportstream{
-    display: none;
-    .form-group
-}
-#Tempstream{
-    display: none;
-    .form-group
-}
-
-.lblstreamProp {
-    .col-md-4 control-label;
-    float: left;
-    margin-right: 5em;
-}
-
-.lblstreamtype{
-    .col-md-4 control-label;
-    margin: 20px 0 20px 10px;
-}
-
-.istreamlbl{
-    .col-md-4 control-label;
-    margin:20px 10px 20px 0;
-    float:left;
-}
-
-.estreamlbl{
-    .col-md-4 control-label;
-    margin:20px 10px 20px 0;
-    float:left;
-}
-
-.iPredefStreamdiv{
-    margin:20px 0 20px 0;
-    float: left;
-}
-
-.ePredefStreamdiv{
-    margin:20px 0 20px 0;
-    float: left;
-}
-
-.panel-button-moreStreamData{
-    margin: 20px 0 20px 0;
-}
-
-.streamDefDiv{
-    margin: 20px 0 20px 0;
-}
-
-.panel-input-streamName{
-    margin: 20px 0 20px 0;
-}
-
 .disabledbutton{
     pointer-events: none;
     opacity: 0.4;
-}
-
-.importdiv{
-    .form-group;
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-}
-
-.exportdiv{
-    .form-group;
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-}
-
-.attrDiv{
-    .form-group;
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-}
-
-.streamDiv{
-    .form-group;
-    min-height: 450px;
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-}
-
-.btn-import{
-    .btn btn-success;
-    margin:10px 100px 10px 0;
-}
-
-.btn-export{
-    .myButton;
-    margin:10px 100px 10px 0;
-}
-
-.streambtn{
-    .myButton;
-    position: inherit;
-}
-
-.streamnameLbl{
-    /*float: left;*/
-    /*width: 50%;*/
-}
-
-.attrTypecomboDiv{
-    float: left;
-    width: 25%;
-}
-
-.addAttrBtn{
-    .myButton;
-    float: left;
-    width: 25%;
-}
-
-.istreamName{
-    margin:20px 100px 20px 0;
-    width: 220px;
-    background: transparent url('../images/bg.jpg') no-repeat;
-    color : #747862;
-    height:20px;
-    border:0;
-    padding:4px 8px;
-}
-
-.estreamName{
-    margin:20px 100px 20px 0;
-    width: 220px;
-    background: transparent url('../images/bg.jpg') no-repeat;
-    color : #747862;
-    height:20px;
-    border:0;
-    padding:4px 8px;
-}
-
-.headingimport {
-    background-color: #565656;
-    text-align: center;
-    margin:20px 0 20px 0;
-    color: transparent;
-    text-shadow: 0 2px 3px rgba(255,255,255,0.3);
-    -webkit-background-clip: text;
-}
-
-.headingexport{
-    background-color: #565656;
-    text-align: center;
-    margin:20px 0 20px 0;
-    color: transparent;
-    text-shadow: 0 2px 3px rgba(255,255,255,0.3);
-    -webkit-background-clip: text;
-}
-
-.headingstream{
-    background-color: #565656;
-    text-align: center;
-    margin:20px 0 20px 0;
-    color: transparent;
-    text-shadow: 0 2px 3px rgba(255,255,255,0.3);
-    -webkit-background-clip: text;
-}
-
-.btn-define-stream{
-    .myButton;
-    margin:20px 0 20px 0
-}
-
-.newStreamName {
-    margin: 20px 100px 20px 0;
-    width: 30%;
-    float: left;
-    background: transparent url('../images/bg.jpg') no-repeat;
-    color: #747862;
-    height: 20px;
-    border: 0;
-    padding: 4px 8px;
-}
-
-.addattrsetbtn{
-    margin:20px 100px 20px 0;
-    float: left;
-}
-
-.attr-textfield-stylepair{
-    margin: 20px 0 10px 0;
-    float:left;
-    width: 220px;
-    background: transparent url('../images/bg.jpg') no-repeat;
-    color: #747862;
-    height: 20px;
-    border: 0;
-    padding: 4px 8px;
-}
-
-.attr-combobox-stylediv{
-}
-
-.addenteredattr{
-}
-
-.inputvalDiv{
-
-    margin:20px 0 20px 0
-}
-
-.inputLbl{
-    float: left;
-    width: 100%;
-}
-
-.streamnameLbl{
-    float:left;
-    margin: 10px 0 20px 10px;
-    width:30%;
-}
-
-.StreamNameInput{
-    width: 30%;
-    margin: 10px 0 20px 0;
-}
-
-.attrName{
-    float: left;
-    margin: 10px 0 20px 10px;
-    width:30%;
-}
-
-.attNam{
-    float: left;
-    width: 30%;
-    margin: 10px 0 20px 0;
-}
-
-.attrTypecomboDiv{
-    width:15%;
-    margin: 10px 0 20px 10px;
-}
-
-.addAttrBtn{
-    width: 15%;
-    margin: 10px 0 20px 10px;
-}
-
-.closeAttr{
-    margin: 20px 100px 20px 0;
-}
-
-.showAttrDivision{
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-    width: 100%;
 }
 
 table {
@@ -460,10 +67,6 @@ td {
     color: transparent;
     text-shadow: 0 2px 3px rgba(255,255,255,0.3);
     -webkit-background-clip: text;
-}
-
-.tableQueryForm{
-    border-style: none;
 }
 
 .connectorInStream{
@@ -505,61 +108,6 @@ td {
     margin-right: -10%;
 }
 
-.jqueryDivLeft, .jqueryDivRight, .jqueryDivAttrMap , .stqueryDivState, .stqueryDivLogic, .stqueryDivAttrMap , .DefWindowAttrDiv , .rangePartitionTypeTableDiv, .partitionTypeTableDiv {
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px #707070;
-}
-
-.variablePartitionTypeTableDisplayDiv, .rangePartitionTypeTableDisplayDiv{
-    margin: 20px 20px 20px 20px;
-    box-shadow: 3px 4px 5px 6px lightgrey;
-}
-
-.DefWindowAttrTableDiv{
-    margin: 20px 0 20px 0;
-    box-shadow: 3px 4px 5px 6px grey;
-}
-
-.stMultipleStateDiv{
-    margin: 30px 10px 30px 20px;
-    box-shadow: 3px 4px 5px 6px ;
-}
-
-.joinLeftStreamLabel, .joinRightStreamLabel{
-    width: 100%;
-    text-align: center;
-}
-
-.settingsIcon{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-90px;
-    margin-right:20px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
-.settingsIconDef{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-3px;
-    margin-right:-3px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
 .streamNameNode , .queryNameNode , .windowNameNode, .partitionNameNode{
     float:right;
     width:inherit;
@@ -569,23 +117,6 @@ td {
     margin-top:-10px;
     margin-right:-3px;
     font-weight:bolder;
-}
-
-/* Import & Export Streams */
-
-.checkboxStyle{
-    float:right;
-    width:20px;
-    height:20px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:0;
-    margin-right:0;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
 }
 
 /* Window Stream */
@@ -605,239 +136,7 @@ td {
     padding-top: 4px;
 }
 
-/* Defined Stream */
-
-.checkboxStyleDefinedStream{
-    float:right;
-    width:20px;
-    height:20px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:0;
-    margin-right:0;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
-/* Queries */
-
-.checkboxStyle1{
-    float:right;
-    width:20px;
-    height:20px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-2px;
-    margin-right:-120px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
-
-
-/* Window Stream */
-
-.boxclosewindow{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-116px;
-    margin-right:-30px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-/* Queries */
-
-a.boxclose1{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-34px;
-    margin-right:-147px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-
-/* Window Stream */
-
-.showIconDefinedwindow{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-116px;
-    margin-right:-3px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-/* Queries */
-
-.showIconDefined1{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-95px;
-    margin-right:25px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-
-
-/* Window Stream */
-
-.windowSettingIconLoc{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-116px;
-    margin-right:22px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-/* Queries */
-
-.querySettingIconLoc{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-95px;
-    margin-right:50px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-/* Import & Export Streams */
-
-/*Image that shows whether the element's an import, export/defined element*/
-.streamIconloc{
-    float:left;
-    width:32px;
-    height:32px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-color: #707070;
-    border-style:solid;
-    cursor:pointer;
-    color: red;
-    margin-top: -75px;
-    margin-right: -15px;
-    border-radius: 30px;
-}
-/*1- Icon to show definition*/
-.settingsIconLoc{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-106px;
-    margin-right:30px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-/*2- Icon to toggle between showing and hiding connector*/
-.showIconDefined{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-106px;
-    margin-right:0;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-/*3- Icon to remove element*/
-a.boxclose{
-    float:right;
-    width:26px;
-    height:26px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    margin-top:-108px;
-    margin-right:-25px;
-    cursor:pointer;
-    color: red;
-    border-radius: 40px;
-}
-
-#pane {
-    position: absolute;
-    width: 45%;
-    height: 45%;
-    top: 20%;
-    left: 20%;
-
-
-    margin: 0;
-    padding: 0;
-    z-index: 99;
-    border: 2px solid purple;
-    background: #fefefe;
-}
-
-#title {
-    font-family: monospace;
-    background: purple;
-    color: white;
-    font-size: 24px;
-    height: 30px;
-    text-align: center;
-}
-
-#ghostpane {
-    background: #999;
-    opacity: 0.2;
-
-    width: 45%;
-    height: 45%;
-    top: 20%;
-    left: 20%;
-
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    z-index: 98;
-
-    -webkit-transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    -ms-transition: all 0.25s ease-in-out;
-    -o-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in-out;
-}
-
-.myButton {
+.customButton {
     -moz-box-shadow:inset 0 1px 0 0 #ffffff;
     -webkit-box-shadow:inset 0 1px 0 0 #ffffff;
     box-shadow:inset 0 1px 0 0 #ffffff;
@@ -863,7 +162,7 @@ a.boxclose{
     text-decoration:none;
     text-shadow:0 1px 0 #ffffff;
 }
-.myButton:hover {
+.customButton:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b3a8b3), color-stop(1, #ededed));
     background:-moz-linear-gradient(top, #b3a8b3 5%, #ededed 100%);
     background:-webkit-linear-gradient(top, #b3a8b3 5%, #ededed 100%);
@@ -873,17 +172,9 @@ a.boxclose{
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3a8b3', endColorstr='#ededed',GradientType=0);
     background-color:#b3a8b3;
 }
-.myButton:active {
+.customButton:active {
     position:relative;
     top:1px;
 }
-
-/*#jsonOutput, #inputFileNameToSaveAs*/
-/*{*/
-    /*background: #f4f4f4;*/
-    /*border-radius: 3px;*/
-    /*-webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);*/
-    /*box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);*/
-/*}*/
 
 
