--- a/css/canvas.css
+++ b/css/canvas.css
@@ -40,7 +40,6 @@
     cursor: pointer;
     text-align: center;
     z-index: 20;
-    /*position: absolute;*/
     background-color: transparent;
     background-size: 120px 72px;
     background-repeat: no-repeat;
@@ -62,7 +61,7 @@
 }
 
 .squery {
-    background-image: url("../images/Passthrough.png");
+    background-image: url("../images/passthrough.png");
 
 }
 
@@ -71,7 +70,7 @@
 }
 
 .wquery {
-    background-image: url("../images/window1.png");
+    background-image: url("../images/windowQuery.png");
 
 }
 .joquery {
@@ -79,7 +78,7 @@
 
 }
 .stquery {
-    background-image: url("../images/statemachine.png");
+    background-image: url("../images/pattern.png");
 }
 /*
     Grouping Element
@@ -87,7 +86,6 @@
 
 .partition {
     border: 1px solid #346789;
-    /*resize: both;*/
     box-shadow: 2px 2px 19px #aaa;
     -o-box-shadow: 2px 2px 19px #aaa;
     -webkit-box-shadow: 2px 2px 19px #aaa;
@@ -101,7 +99,6 @@
     cursor: pointer;
     text-align: center;
     z-index: 20;
-    /*position: absolute;*/
     background-color: transparent;
     color: black;
     font-family: helvetica, sans-serif;
@@ -147,7 +144,7 @@
 }
 
 .squerydrop {
-    background-image: url("../images/Passthrough.png");
+    background-image: url("../images/passthrough.png");
 }
 
 .filterdrop {
@@ -155,7 +152,7 @@
 }
 
 .wquerydrop {
-    background-image: url("../images/window1.png");
+    background-image: url("../images/windowQuery.png");
 }
 
 .joquerydrop {
@@ -163,7 +160,7 @@
 }
 
 .stquerydrop {
-    background-image: url("../images/statemachine.png");
+    background-image: url("../images/pattern.png");
 }
 
 /*
@@ -190,21 +187,11 @@
     -o-transition: -o-box-shadow 0.15s ease-in;
     transition: box-shadow 0.15s ease-in;
     box-sizing: border-box;
-
 }
 
 /*
     Element Divisions added as classes when the element is appended
 */
-
-.task {
-    font-size: 12px;
-    text-align: right;
-    font-weight: 200;
-    border: 1px solid black;
-    background-color: #ddddff;
-}
-
 .title {
     padding: 10px;
     cursor: move;
@@ -223,23 +210,6 @@
     border: 1px solid darkblue;
     background-color: darkblue;
 }
-
-.pro:hover {
-    box-shadow: 2px 2px 19px #444;
-    -o-box-shadow: 2px 2px 19px #444;
-    -webkit-box-shadow: 2px 2px 19px #444;
-    -moz-box-shadow: 2px 2px 19px #444;
-    opacity:0.6;
-    filter:alpha(opacity=60);
-}
-
-
-.propertyBox {
-    float: right;
-    width: 150px;
-    background-color: lightgrey;
-    height: 650px;
-}
 .property {
     float: left;
     margin-top: 10px;
@@ -248,27 +218,6 @@
     height: 800px;
     overflow-y: scroll;
     overflow-x: scroll;
-
-}
-.jsplumb-connector {
-    z-index: 4;
-    padding: 50px;
-
-}
-.jsplumb-endpoint, .endpointTargetLabel, .endpointSourceLabel {
-    z-index: 21;
-    cursor: pointer;
-}
-
-.aLabel {
-    background-color: white;
-    padding: 0.4em;
-    font: 12px sans-serif;
-    color: #444;
-    z-index: 21;
-    border: 1px dotted gray;
-    opacity: 0.8;
-    cursor: pointer;
 }
 
 /*
