--- a/view/index.html
+++ b/view/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="../js/lib/jquery-1.10.2.js"></script>
     <script src="../js/lib/underscore-min.js" type="text/javascript"></script>
     <script src="../js/lib/backbone-min.js" type="text/javascript"></script>
+    <script src="../js/lib/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/lib/backbone.localStorage-min.js" type="text/javascript"></script>
     <script src="../js/lib/jquery-ui.min.js"></script>
     <script src="../js/lib/jsoneditor.js"></script>
@@ -12,10 +13,7 @@
 
     <script src="../js/Customscripts/main.js" type="text/javascript"></script>
     <script src="../js/Customscripts/formBuilder.js" type="text/javascript"></script>
-    <script src="../js/Customscripts/storage.js" type="text/javascript"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../js/Customscripts/models.js" type="text/javascript"></script>
 
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="../css/canvas.css">
@@ -102,14 +100,14 @@
 </div>
 
     <!--Container/Canvas-->
-    <div class="col-sm-7 container" id="container" ></div>
+    <div class="container col-sm-7 " id="container" ></div>
 
     <!--Property pane-->
     <div class="property col-sm-3 collapse" id="propertypane"></div>
 
     <!--Button Panel-->
     <div class = "col-sm-12">
-        <button id="auto-align" class="myButton">Align</button>
+        <button id="auto-align" class="customButton">Align</button>
     </div>
 
 </section>
