--- a/view/index.html
+++ b/view/index.html
@@ -9,7 +9,7 @@
     <script src="../js/lib/jquery-ui.min.js"></script>
     <script src="../js/lib/jsoneditor.js"></script>
     <script src="../js/lib/jsPlumb-2.2.6-min.js"></script>
-    <script src="../js/lib/dagre.js"></script>
+    <script src="../js/lib/dagre.min.js"></script>
 
     <script src="../js/Customscripts/main.js" type="text/javascript"></script>
     <script src="../js/Customscripts/formBuilder.js" type="text/javascript"></script>
